--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,9 @@
 <h1>Contact Me</h1>
-<p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
-<p>Address:</p>
+<p>Tel: +63963287467</p>
+<p>Email: jhomingarcia@yahoo.com</p>
+<p>Address:F3B Page Condominium</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  2268 Padre Burgos Street<br />
+  Pasay City<br />
+  Philippines <br />
 </p>
